Fixes center alignment bug in introduction

--- a/app/scss/partials/_introduction.scss
+++ b/app/scss/partials/_introduction.scss
@@ -27,7 +27,6 @@
             }
             @media (max-width: 720px){
                 font-size: 1rem;
-                width: 70vw;
             }
         }
     }
